Added footer to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <header><p>Hello World, are you new</p></header>
 <body>
-    
+    <footer>
+        <p>&copy; Team1</p>
+    </footer>
 </body>
 </html>
