Added a greeting from Dan

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <header><p>Hello World, are you new</p></header>
 <body>
-    
+    <h4>Hello World from Dan, I greet you!</h4>
 </body>
 </html>
